--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ div img {
 .half2 {
   padding-left: 25px;
   padding-right: 20px;
+  margin-right: 150px;
 }
 .link-button {
   text-decoration: none;
